--- a/style.css
+++ b/style.css
@@ -17,6 +17,25 @@ nav {
     background-color: black;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: rgb(5, 4, 99);
+        color: white;
+        font-family: 'poppins', sans-serif;
+    }
+
+    nav {
+        flex-direction: column;
+        align-items: center;
+        height: 90px;
+        background-color: black;
+    }
+
+    .firstSection {
+        flex-direction: column;
+    }
+}
+
 nav ul {
     display: flex;
     justify-content: center;
@@ -89,8 +108,10 @@ nav a:hover {
 
 footer {
     background-color: rgb(9, 14, 77);
-    height: auto;
-
+    height: 50px;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
 }
 
 footer ul {
@@ -140,6 +161,7 @@ footer span {
     font-size: 16px;
     cursor: pointer;
 }
+
 .btn2 {
     background-color: rgb(5, 4, 99);
     color: white;
@@ -148,4 +170,71 @@ footer span {
     padding: 10px 30px;
     font-size: 16px;
     cursor: pointer;
+}
+
+.project {
+    margin: 0px;
+    padding: 0px 23px;
+
+}
+
+.image {
+    background-image: url('bg.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    min-height: 100vh;
+}
+
+form {
+    margin: 30px;
+    padding: 20px 25px;
+    border: 2px solid grey;
+    border-radius: 10px;
+    box-shadow: 15px 10px black;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+textarea {
+    width: 100%;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+button {
+    background-color: #120a57;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #1e34af;
+}
+
+p {
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 20px;
+    width: 50%;
+    font-weight: 800;
+    height: 50%;
+    color: white;
 }
