--- a/style.css
+++ b/style.css
@@ -109,8 +109,8 @@ nav a:hover {
 footer {
     background-color: rgb(9, 14, 77);
     height: 50px;
+    position: relative;
     bottom: 0;
-    position: fixed;
     width: 100%;
 }
 
